--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
       animation: blink 1.5s infinite;
     }
   <!-- 引入 seedrandom 库，用于固定随机种子 -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/seedrandom@3.0.5/seedrandom.min.js"></script>
+  <script src="seedrandom.min.js"></script>
+
 
   </style>
 </head>
