--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>Sudoku - 优化候选数逻辑</title>
+  <title>Sudoku - 你是大师啊？</title>
   <script src="https://cdn.jsdelivr.net/npm/seedrandom/dist/seedrandom.min.js"></script>
   <style>
     :root {
