--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       padding: 10px;
     }
     .board-area {
-      flex: 1;
+      /*flex: 1;*/
       display: flex;
       align-items: center;
       justify-content: center;
