--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       padding: 10px;
     }
     .board-area {
-      /*flex: 1;*/
+       /*flex: 1;*/
       display: flex;
       align-items: center;
       justify-content: center;
@@ -85,12 +85,12 @@
       border-radius: 8px;
       padding: 8px;
       margin: 10px auto;
-      max-width: 800px;
+      max-width: 900px;
       position: relative;
       z-index: 1;
     }
     .input-controls {
-      max-width: 600px; /* 控制数字键盘宽度 */
+      max-width: 900px; /* 控制数字键盘宽度 */
       margin: 0 auto;
     }
     .mode-group {
@@ -112,12 +112,13 @@
       aspect-ratio: 1;
       font-size: 16px;
       padding: 0;
-      min-width: 32px;
-      height: 32px;
+      min-width: 80px;
+      height: 80px;
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 4px;
+      margin-right: 10px; 
     }
     .candidate {
       font-size: 24px; /* 增大候选数字大小 */
